tests/negative/test_decl_bad_id_nonfirst.orb
fnc main() () {
    let (x:i32 100) ("y":i32 200);
};